[package]
name = "visusix"
version = "0.1.0"
authors = ["Cosmo <tristan.sterin@gmail.com>"]
edition = "2018"

[[bin]]
name = "visusix"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
piston = "0.52.0"
piston2d-graphics = "0.37.0"
pistoncore-glutin_window = "0.66.0"
piston2d-opengl_graphics = "0.74.0"
clap = "2.33.3"